<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.EditPlacementActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/add_room_label"
        style="@style/custom_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_room"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/add_type_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_input"
        android:layout_below="@+id/add_room_label"
        android:layout_marginTop="60dp"
        android:hint="@string/room_type"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>

    <EditText
        android:id="@+id/add_floor_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_input"
        android:layout_below="@+id/add_type_input"
        android:layout_marginTop="40dp"
        android:hint="@string/floor"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>
    <EditText
        android:id="@+id/add_win_count_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_input"
        android:layout_below="@+id/add_floor_input"
        android:layout_marginTop="40dp"
        android:hint="@string/winCount"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>
    <EditText
        android:id="@+id/add_area_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/custom_input"
        android:layout_below="@+id/add_win_count_input"
        android:layout_marginTop="40dp"
        android:hint="@string/area"
        android:inputType="text"
        android:autofillHints=""
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>

    <Button
        android:id="@+id/cancel_add_room_btn"
        style="@style/cancel_btn"
        android:layout_below="@+id/add_area_input"
        android:layout_alignStart="@+id/add_area_input"
        android:layout_marginStart="0dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/save_add_room_btn"
        style="@style/save_btn"
        android:text="@string/save"
        android:background="@drawable/button"
        android:layout_alignTop="@+id/cancel_add_room_btn"
        android:layout_toEndOf="@+id/cancel_add_room_btn" />


</RelativeLayout>