<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/light"
    tools:context=".ui.auth.MenuActivity">

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:layout_marginTop="60dp"
        style="@style/custom_title"/>

    <Button
        android:id="@+id/profile_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        style="@style/custom_button"
        android:text="@string/profile"/>

    <Button
        android:id="@+id/services_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        style="@style/custom_button"
        android:text="@string/services" />

    <Button
        android:id="@+id/contracts_btn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        style="@style/custom_button"
        android:text="@string/contracts"/>

</LinearLayout>