<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.SignUpActivity"
    android:background="@color/light_grey">

    <EditText
            android:id="@+id/confirm_password"
            style="@style/custom_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/signup_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/signup_title"
            app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
            app:layout_constraintVertical_bias="0.553" />

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        style="@style/custom_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".15"/>

    <TextView
        android:id="@+id/signup_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/custom_subtitle"
        app:layout_constraintTop_toBottomOf="@id/signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/custom_input"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
        app:layout_constraintStart_toStartOf="@id/signup_title"
        app:layout_constraintEnd_toEndOf="@id/signup_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".08" />

    <EditText
        android:id="@+id/email"
        style="@style/custom_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="@id/signup_title"
        app:layout_constraintStart_toStartOf="@id/signup_title"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias=".3" />

    <EditText
            android:id="@+id/phone"
            style="@style/custom_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/signup_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/signup_title"
            app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
            app:layout_constraintVertical_bias="0.319" />

    <EditText
            android:id="@+id/password"
            style="@style/custom_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/signup_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/signup_title"
            app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
            app:layout_constraintVertical_bias="0.438" />

    <Spinner
        android:id="@+id/get_role_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/signup_title"
        app:layout_constraintStart_toStartOf="@id/signup_title"
        app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
        app:layout_constraintVertical_bias=".63"/>

    <Button
        android:id="@+id/signin_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/custom_button"
        android:backgroundTint="@color/indigo"
        android:text="@string/signup"
        app:layout_constraintTop_toBottomOf="@id/signup_subtitle"
        app:layout_constraintStart_toStartOf="@id/signup_title"
        app:layout_constraintEnd_toEndOf="@id/signup_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".75" />


</androidx.constraintlayout.widget.ConstraintLayout>
