<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/services_cv"
    style="@style/card">

    <RelativeLayout
        style="@style/card_rl"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_service_label"
            style="@style/card_header" />

        <TextView
            android:id="@+id/desc_label"
            style="@style/card_text"
            android:layout_below="@+id/name_service_label"
            android:layout_marginTop="20dp"
            android:text="@string/desc"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc_text"
            style="@style/card_text"
            android:layout_alignTop="@+id/desc_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/desc_label" />

        <TextView
            android:id="@+id/min_area_label"
            style="@style/card_text"
            android:layout_below="@+id/desc_text"
            android:layout_marginTop="10dp"
            android:text="@string/min_area"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/min_area_text"
            style="@style/card_text"
            android:layout_alignTop="@+id/min_area_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/min_area_label" />

        <TextView
            android:id="@+id/max_area_label"
            style="@style/card_text"
            android:layout_below="@+id/min_area_label"
            android:layout_marginTop="10dp"
            android:text="@string/max_area"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/max_area_text"
            style="@style/card_text"
            android:layout_alignTop="@+id/max_area_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/max_area_label" />
        <TextView
            android:id="@+id/room_type_label"
            style="@style/card_text"
            android:layout_below="@+id/max_area_label"
            android:layout_marginTop="10dp"
            android:text="@string/room_type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/room_type_text"
            style="@style/card_text"
            android:layout_alignTop="@+id/room_type_label"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/room_type_label" />

        <TextView
            android:id="@+id/price_label"
            style="@style/card_text"
            android:layout_below="@+id/room_type_label"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="@string/price"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_text"
            style="@style/card_text"
            android:layout_alignTop="@+id/price_label"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/price_label" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>
